# bbi

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  explore.ipynb  pyproject.toml  render.py  render_log.py  requirements.txt  returns_over_time.npy  train.py  training.py  ui.py
bbi/: agent.py  utils.py
bbi/agents/: __init__.py  agents.py  base_agent.py  planning_agent_base.py  qlearning.py  selective_planning_agent.py  selector.py  unselective_planning_agent.py
bbi/config/: goright_bbi.gin  goright_bbi.yaml  goright_bbi_linear.yaml  goright_bbi_neural.yaml  goright_bbi_tree.yaml  goright_expected_h2.gin  goright_expected_h2.yaml  goright_expected_h5.gin  goright_expected_h5.yaml  goright_perfect.gin  goright_perfect.yaml  goright_q_learning.yaml  goright_qlearning.gin  goright_sampling_h2.gin  goright_sampling_h2.yaml  goright_sampling_h5.gin  goright_sampling_h5.yaml
bbi/environments/: __init__.py  base_env.py  goright.py
bbi/models/: 1spv.py  __init__.py  _regression_tree_bbi.py  bbi.py  expectation.py  linear_bbi.py  model_base.py  neural_bbi.py  perfect.py  regression_tree_bbi.py  sampling.py
bbi/utils/: __init__.py  action_selection.py  constants.py  dataclasses.py  render.py  utils.py
scripts/: goright_perfect.sh  goright_q_learning.sh  goright_sampling_h2.sh
src/agents/: agents.py  q_learning.py
src/environments/: goright.py
