[project]
name = "bbi"
version = "0.1.0"
description = 'Replication of results published in "Bounding-Box Inference for Error-Aware ModelBased Reinforcement Learning"'
readme = "README.md"
requires-python = "==3.10.*"
license = {text = "MIT License"}
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "gymnasium[classic-control]>=0.29.1",
    "matplotlib>=3.9.2",
    "wandb>=0.18.1",
    "bbi",
    "isort>=5.13.2",
    "black>=24.10.0",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"

[tool.uv.sources]
bbi = { workspace = true }

[tool.setuptools]
packages = ["bbi"]
