[project]
name = "bbi"
version = "0.1.0"
description = 'Replication of results published in "Bounding-Box Inference for Error-Aware ModelBased Reinforcement Learning"'
readme = "README.md"
requires-python = "==3.10.*"
license = {text = "MIT License"}
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "gymnasium[classic-control]>=0.29.1",
    "matplotlib>=3.9.2",
    "wandb==0.18.0",
    "bbi",
    "isort>=5.13.2",
    "black==22.8.0",
    "protobuf==5.28.3",
    "sentry-sdk==2.19.0",
    "tomli==2.0.1",
    "setuptools==75.3.0",
    "build==1.0.3",
    "wheel==0.42.0",
    "torch>=2.5.1",
    "pyarrow>=18.1.0",
    "pre-commit>=4.0.1",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"

[tool.uv.sources]
bbi = { workspace = true }

[tool.setuptools]
packages = ["bbi"]
